fixed spacing for progress bar

--- a/src/views/monitorView.css
+++ b/src/views/monitorView.css
@@ -70,9 +70,9 @@
 
 .treez-monitor-progress-background {
 	background-color: lightgray;
-	height: 3px;	
+	height: 3px;
 	padding:0;
-	margin-top:-3px;
+	margin-top: 2px;
 }
 
 .treez-monitor-progress-bar {	
